# thingspeak

./: .gitignore  .travis.yml  CONTRIBUTORS  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: Makefile  api.rst  changelog.rst  conf.py  examples.rst  index.rst  install.rst
examples/: log.py  pull.py  thingspeak_cpu_loop.py
tests/: conftest.py  test_channel.py  test_codestyle.py
tests/cassettes/: test_get_with_key.yaml  test_get_without_key.yaml  test_get_wrong_key.yaml  test_update.yaml
thingspeak/: CONTRIBUTORS  __init__.py  cmdline.py  thingspeak.py
