[tool.poetry]
name = "thingspeak"
version = "1.0.0"
description = "Client library for the thingspeak.com API"
authors = ["Mikołaj Chwalisz <m.chwalisz@gmail.com>"]
license = "LGPL-3.0"
readme = "README.rst"

documentation = "https://thingspeak.readthedocs.io/"
include = ["examples/*", "CONTRIBUTORS"]

[tool.poetry.scripts]
thingspeak = 'thingspeak.cmdline:main'

[tool.poetry.dependencies]
python = "^3.4"
requests = "^2.21"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
sphinx = "^1.8"
vcrpy = "^2.0"
pytest-vcr = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
